# SelfServiceCarWashing

./: .cproject  .cproject.bak  .gitignore  .gitmodules  .mxproject  .project  .project.bak  CMakeLists.txt  CMakeLists_template.txt  Doc.md  STM32F429BITx_FLASH.ld  SelfServiceCarWashing.ioc  SelfServiceCarWashing.xml  Soft.md  openocd.cfg  ram-analyzer.py
Core/Inc/: FreeRTOSConfig.h  dma2d.h  fmc.h  ltdc.h  lv_conf.h  lv_demo_conf.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Core/Inc/Comm/: handles.h  procedure.h
Core/Inc/Common/: config.h  hooks.h  init.h  msg_types.h  printf-stdarg.h  status.h  utils.h
Core/Inc/Flash/: flash.h
Core/Inc/Inuse/: handles.h
Core/Inc/LCD/: handles.h
Core/Inc/Net/: at.h  cmd.h  config.h  vars.h  wifi.h
Core/Inc/Net/AT/: command.h  handles.h  utils.h
Core/Inc/Net/WIFI/: handles.h  procedure.h
Core/Inc/Tasks/: tasks.h
Core/Src/: dma.c  dma2d.c  fmc.c  freertos.c  gpio.c  ltdc.c  main.c  rtc.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
Core/Src/Comm/: handles.c  procedure.c
Core/Src/Common/: config.c  printf-stdarg.c  timegm.c  utils.c
Core/Src/Flash/: flash.c
Core/Src/GUI/: porting.c
Core/Src/Inuse/: handles.c
Core/Src/LCD/: NotoSansCJK-24.c  NotoSansCJK-36.c  gui.c  handles.c  init.c  lvgl.c  touchpad.c
Core/Src/Net/: at.c  cmd.c  common_vars.c  dev_cmd.c  lte.c  serv_cmd.c  uart.c  wifi.c
Core/Src/Net/AT/: command.c  handles.c  utils.c
Core/Src/Net/WIFI/: handles.c  procedure.c
Core/Src/SDRAM/: sdram.c
Core/Src/Tasks/: init.c  inuse.c  standby.c
Drivers/RTT/Inc/: SEGGER_RTT.h
Middlewares/: GUI.txt
Middlewares/GUI/: Inc  Src
Middlewares/GUI/Inc/GUI/: config.h  handles.h  lvgl.h  porting.h
Middlewares/GUI/Src/GUI/: callbacks.c  callbacks.h  screen_inuse.c  screen_loading.c  screen_login.c  screen_switch.c  screens.h  setup.c  vars.c  vars.h
USB_DEVICE/App/: usb_device.c  usbd_desc.c  usbd_storage_if.c  usbd_storage_if.h
